force-app/main/default/objects/Zrule_Product_Mapping__c/Zrule_Product_Mapping__c.object-meta.xml
<CustomObject>
    <label>Zrule Product Mapping</label>
    <nameField>
        <label>Zrule Product Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zrule Product Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>