force-app/main/default/objects/Zrule_Product_Mapping__c/fields/Massage_text__c.field-meta.xml
<CustomField>
    <fullName>Massage_text__c</fullName>
    <label>Massage text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>