force-app/main/default/objects/Zrule_Product_Mapping__c/fields/Product_Compatibility__c.field-meta.xml
<CustomField>
    <fullName>Product_Compatibility__c</fullName>
    <label>Product Compatibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>