force-app/main/default/objects/Zrule_Product_Mapping__c/fields/Product_Rate_Plan__c.field-meta.xml
<CustomField>
    <fullName>Product_Rate_Plan__c</fullName>
    <label>Product Rate Plan</label>
    <length>18</length>
    <type>Text</type>
</CustomField>